--- a/Backend/package.json
+++ b/Backend/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.7.0",
     "mongoose": "^8.4.1",
-    "validator": "^13.12.0"
+    "validator": "^13.12.0",
+    "xss": "^1.0.15"
   }
 }
