--- a/Backend/config.env
+++ b/Backend/config.env
@@ -2,3 +2,6 @@ NODE_ENV=development
 PORT=3000
 DATABASE=mongodb+srv://YYashSingh:<password>@cluster0.fvcr7dy.mongodb.net/
 DATABASE_PW=db12jh9873
+JWT_SECRET_CODE=my-secret-code-for-haha
+JWT_EXPIRES_IN=90d
+JWT_COOKIE_EXPIRES_IN=90
