--- a/Backend/config.env
+++ b/Backend/config.env
@@ -1,7 +1,7 @@
 NODE_ENV=development
 PORT=3000
-DATABASE=mongodb+srv://YYashSingh:<db_password>@cluster0.fvcr7dy.mongodb.net/
-DATABASE_PW=QQThIKYBzZhAzZoF
+DATABASE=mongodb+srv://yyashsngh:<db_password>@cluster1.5rw9x.mongodb.net/
+DATABASE_PW=IEc2gRpRIqWAF6aj
 JWT_SECRET_CODE=my-secret-code-for-haha
 JWT_EXPIRES_IN=90d
 JWT_COOKIE_EXPIRES_IN=90
