config.env edit

--- a/Backend/config.env
+++ b/Backend/config.env
@@ -5,3 +5,6 @@ DATABASE_PW=IEc2gRpRIqWAF6aj
 JWT_SECRET_CODE=my-secret-code-for-haha
 JWT_EXPIRES_IN=90d
 JWT_COOKIE_EXPIRES_IN=90
+
+AVC6FoX8rmAsbvbN
+IEc2gRpRIqWAF6aj
