--- a/Backend/config.env
+++ b/Backend/config.env
@@ -1,4 +1,4 @@
-NODE_ENV=production
+NODE_ENV=development
 PORT=3000
 DATABASE=mongodb+srv://yyashsngh:<db_password>@cluster1.5rw9x.mongodb.net/
 DATABASE_PW=IEc2gRpRIqWAF6aj
